# Hackster-Advanced-Wearables

./: CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  speaker_3d.stl
src/: adafruit_gps.h  audio_soundboard.h  audio_soundboard_functions.c  config.h  main.c  minmea.c  minmea.h  uv_config.h
